--- a/_config.yml
+++ b/_config.yml
@@ -127,14 +127,14 @@ footer:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
+    - label: " Contact"
+      icon: "fas fa-envelope"
+      url: "/contact/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/skoobasteeve/rayandgwen-wedding"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
       # url:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
